# Yile

./: .gitignore  CMakeLists.txt  README.md
data/: lps_par_0.json  sus_ind_par_0.json  tir_fiala_par_0.json  vhl_bdy_par_0.json
data/inputs/: 14dof_tir_input_3.csv  tir_4fiala_input2.csv  tir_4fiala_inputs.csv
data/parameters/: parameters.json
data/params/: sus_ind_par_0.json  vhl_bdy_par_0.json  whl_disk_par_0.json
docs/: cal_inv  inputs_and_outputs.xlsx
docs/testcase/tir_fiala/: vx_sine_input.csv  vx_vy_sine_input.csv
docs/testcase/wheel_disk/: pwm_input1.csv  pwm_input2.csv
houtest/tir_test_result/history/: vy_sine_result.csv
houtest/wheel_test_result/: sine_result.csv
install/: demo  demo_client  demo_server
install/data/parameters/: parameters_0.json
install/include/: common.hpp  subsystem_sus_2ind.hpp  subsystem_tir_4fiala.hpp  system_wheel_tire_4disk_fiala.hpp  system_whl_4disk.hpp  vehicle_body.hpp
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  demo.cpp  demo_client.cpp  demo_server.cpp  test.cpp
src/demo/simulators/: simulator_chassis_2ind_disk_fiala.cpp  simulator_chassis_2ind_disk_fiala.hpp  simulator_pass14dof.cpp  simulator_pass14dof.hpp  simulator_sus_2ind.cpp  simulator_sus_2ind.hpp  simulator_sus_wheel_tire_2ind_disk_fiala.cpp  simulator_sus_wheel_tire_2ind_disk_fiala.hpp  simulator_tir_4fiala.cpp  simulator_tir_4fiala.hpp  simulator_vehicle_body.cpp  simulator_vehicle_body.hpp  simulator_wheel_tire_4disk_fiala.cpp  simulator_wheel_tire_4disk_fiala.hpp  simulator_whl_4disk.cpp  simulator_whl_4disk.hpp
src/demo/simulators/auxiliary/: task.hpp  udp_server.cpp  udp_server.hpp  udp_server_client.cpp  udp_server_client.hpp
src/demo/simulators/communicators/: udp_server.cpp  udp_server.hpp
src/models/: CMakeLists.txt  yile.hpp
src/models/components/: common.cpp  common.hpp  low_pass_filter.cpp  low_pass_filter.hpp  sus_ind_2tracks.cpp  sus_ind_2tracks.hpp  tire_fiala.cpp  tire_fiala.hpp  vehicle_body.cpp  vehicle_body.hpp  wheel_disk.cpp  wheel_disk.hpp  wheel_disk_struct.cpp  wheel_disk_struct.hpp
src/models/components/obsolete/1/: sus_macpherson.cpp  sus_macpherson.hpp  system_states.hpp  tire_fiala.cpp  tire_fiala.hpp  wheel.cpp  wheel.hpp
src/models/components/obsolete/2/: sus_macpherson_2tracks.cpp  sus_macpherson_2tracks.hpp  vehicle_body.cpp  vehicle_body.hpp  wheel_disk_tire_fiala.cpp  wheel_disk_tire_fiala.hpp
src/models/interfaces/: interface_chassis_2ind_disk_fiala.cpp  interface_chassis_2ind_disk_fiala.hpp  interface_entire_disk_fiala.cpp  interface_entire_disk_fiala.hpp  interface_lpf.cpp  interface_lpf.hpp  interface_sus_2ind.cpp  interface_sus_2ind.hpp  interface_tir_4fiala.cpp  interface_tir_4fiala.hpp  interface_vehicle_body.cpp  interface_vehicle_body.hpp  interface_whl_4disk.cpp  interface_whl_4disk.hpp  interface_whl_disk_tir_fiala.cpp  interface_whl_disk_tir_fiala.hpp
src/models/subsystems/: subsystem_sus_2ind.cpp  subsystem_sus_2ind.hpp  subsystem_tir_4fiala.cpp  subsystem_tir_4fiala.hpp  subsystem_whl_4disk.cpp  subsystem_whl_4disk.hpp
src/models/subsystems/obsolete/: subsystem_4wheeltires_diskfiala.cpp  subsystem_4wheeltires_diskfiala.hpp  subsystem_suspensions_2macpherson.cpp  subsystem_suspensions_2macpherson.hpp
src/models/systems/: system_chassis_2ind_disk_fiala.cpp  system_chassis_2ind_disk_fiala.hpp  system_lpf.cpp  system_lpf.hpp  system_sus_2ind.cpp  system_sus_2ind.hpp  system_sus_wheel_tire_2ind_disk_fiala.cpp  system_sus_wheel_tire_2ind_disk_fiala.hpp  system_tir_4fiala.cpp  system_tir_4fiala.hpp  system_vehicle_body.cpp  system_vehicle_body.hpp  system_wheel_tire_4disk_fiala.cpp  system_wheel_tire_4disk_fiala.hpp  system_whl_4disk.cpp  system_whl_4disk.hpp  system_whl_disk_tir_fiala.cpp  system_whl_disk_tir_fiala.hpp
src/models/systems/obsolete/: system_4tires.cpp  system_4tires.hpp  system_4wheels.cpp  system_4wheels.hpp  system_4wheeltires_diskfiala.cpp  system_4wheeltires_diskfiala.hpp  system_connected.cpp  system_connected.hpp  system_suspensions_2macpherson.cpp  system_suspensions_2macpherson.hpp  system_vehicle_body.cpp  system_vehicle_body.hpp  system_wheels_tires.cpp  system_wheels_tires.hpp
src/test/: CMakeLists.txt  multithread.cpp  test.cpp  udp_client.cpp
src/test/simulators/: simulator_chassis_2ind_disk_fiala.cpp  simulator_chassis_2ind_disk_fiala.hpp  simulator_lpf.cpp  simulator_lpf.hpp  simulator_pass14dof.cpp  simulator_pass14dof.hpp  simulator_sus_2ind.cpp  simulator_sus_2ind.hpp  simulator_sus_wheel_tire_2ind_disk_fiala.cpp  simulator_sus_wheel_tire_2ind_disk_fiala.hpp  simulator_tir_4fiala.cpp  simulator_tir_4fiala.hpp  simulator_vehicle_body.cpp  simulator_vehicle_body.hpp  simulator_wheel_tire_4disk_fiala.cpp  simulator_wheel_tire_4disk_fiala.hpp  simulator_whl_4disk.cpp  simulator_whl_4disk.hpp  simulator_whl_disk_tir_fiala.cpp  simulator_whl_disk_tir_fiala.hpp
src/test/simulators/obsolete/1/: simulator_4tires.cpp  simulator_4tires.hpp  simulator_4wheels.cpp  simulator_4wheels.hpp  simulator_connected.cpp  simulator_connected.hpp  simulator_wheels_tires.cpp  simulator_wheels_tires.hpp
src/test/simulators/obsolete/2/: simulator_4wheeltires_diskfiala.cpp  simulator_4wheeltires_diskfiala.hpp  simulator_suspensions_2macpherson.cpp  simulator_suspensions_2macpherson.hpp  simulator_vehicle_body.cpp  simulator_vehicle_body.hpp
